fixing spacing and tect centering in footer

--- a/src/styles.css
+++ b/src/styles.css
@@ -62,24 +62,6 @@
     box-shadow: 5px 10px 5px 2px rgba(0, 0, 0, .3) inset;
 }
 
-.jumbotron {
-    margin: 0;
-    padding: 0;
-    background-image: url("https://i.vimeocdn.com/video/1603803485-43333a9a8c4370b9822c65a3f45da5f161613e20e00a6877b7623918407d75b5-d?mw=2880&mh=1620&q=70");
-    background-size: cover;
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-footer {
-    background-color: #E2DDD7;
-    color: #080C59;
-    text-align: center;
-}
 .grid-container {
     display: grid;
     grid-template-columns: 1fr;
